--- a/Easy/917/Reverse_Only_Letters.ipynb
+++ b/Easy/917/Reverse_Only_Letters.ipynb
@@ -8,8 +8,16 @@
     "原題目連結: https://leetcode.com/problems/reverse-only-letters/  \n",
     "例如以下範例:  \n",
     "Ex1:  \n",
+    "Input: \"ab-cd\"  \n",
+    "Output: \"dc-ba\"  \n",
+    "\n",
+    "Ex2:  \n",
     "Input: \"a-bC-dEf-ghIj\"  \n",
-    "Output: \"j-Ih-gfE-dCba\"\n"
+    "Output: \"j-Ih-gfE-dCba\"\n",
+    "  \n",
+    "EX3:  \n",
+    "Input: \"Test1ng-Leet=code-Q!\"  \n",
+    "Output: \"Qedo1ct-eeLg=ntse-T!\""
    ]
   },
   {
