--- a/Easy/14/Longest_Common_Prefix.ipynb
+++ b/Easy/14/Longest_Common_Prefix.ipynb
@@ -23,7 +23,40 @@
    "source": [
     "* 解題想法:  \n",
     "由於是要找出所有字串中相同的開頭，因此需要先找出最短的字串為何，再用迴圈判斷在每個index所有字串的字母是否相同  \n",
-    "如果有一個不相同，則終止迴圈，並回傳迴圈結束前的最後index，就可找出最ㄔㄤ"
+    "如果有一個不相同，則終止迴圈，並回傳迴圈結束前的最後index，就可找出最長的字首。如果沒有相同字首的話則直接回傳空字串"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestCommonPrefix(self, strs: List[str]) -> str:\n",
+    "        prefix = 0\n",
+    "        temp = ''\n",
+    "        is_same= True\n",
+    "        if len(strs) > 0:\n",
+    "            short_len = len(strs[0])\n",
+    "            short_index = 0\n",
+    "            for l in range(len(strs)):\n",
+    "                if len(strs[l]) < short_len:\n",
+    "                    short_len = len(strs[l])\n",
+    "                    short_index = l\n",
+    "                    \n",
+    "            short = strs[short_index]\n",
+    "            for n in range(len(short)):\n",
+    "                temp = short[n]\n",
+    "                for m in range(len(strs)):\n",
+    "                    if temp != strs[m][n]:\n",
+    "                        is_same = False\n",
+    "                        break\n",
+    "                if is_same == False:\n",
+    "                    break\n",
+    "                prefix = n+1\n",
+    "            temp = strs[0][:prefix]\n",
+    "        return temp"
    ]
   }
  ],
