--- a/Easy/1287/Element_Appearing_More_Than_25%_In_Sorted_Array.ipynb
+++ b/Easy/1287/Element_Appearing_More_Than_25%_In_Sorted_Array.ipynb
@@ -18,7 +18,29 @@
    "metadata": {},
    "source": [
     "* 解題想法:  \n",
-    "其實就只是單純的對array中每個數字統計出現次數，最後找"
+    "其實就只是單純的對array中每個數字統計出現次數，最後找出大於25%的數字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findSpecialInteger(self, arr: List[int]) -> int:\n",
+    "        freq = {}\n",
+    "        result = 0\n",
+    "        for n in range(len(arr)):\n",
+    "            if arr[n] not in freq.keys():\n",
+    "                freq[arr[n]] = 1\n",
+    "            else:\n",
+    "                freq[arr[n]] += 1\n",
+    "        for key in freq.keys():\n",
+    "            if freq[key] > len(arr)*0.25:\n",
+    "                result = key\n",
+    "                break\n",
+    "        return result"
    ]
   }
  ],
