--- a/Easy/1290/Convert_Binary_Number_in_a_Linked_List_to_Integer.ipynb
+++ b/Easy/1290/Convert_Binary_Number_in_a_Linked_List_to_Integer.ipynb
@@ -35,7 +35,23 @@
    "metadata": {},
    "source": [
     "* 解題想法:  \n",
-    "用一個迴圈，將sorted list中的數字取出後，再用內建函數進行ㄓㄨㄢ"
+    "用一個迴圈，將sorted list中的數字取出後，再用內建函數進行二進位轉換，最後回傳轉換後的結果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def getDecimalValue(self, head: ListNode) -> int:\n",
+    "        digits = ''\n",
+    "        while head:\n",
+    "            digits += str(head.val)\n",
+    "            head = head.next\n",
+    "        total = int(digits)\n",
+    "        return int(digits,2)"
    ]
   }
  ],
