--- a/Easy/1313/Decompress_Run-Length_Encoded_List.ipynb
+++ b/Easy/1313/Decompress_Run-Length_Encoded_List.ipynb
@@ -33,7 +33,22 @@
     "* 解題想法:  \n",
     "根據題目的提供，前面的是數字的頻率，後面是出現的數字  \n",
     "因此用兩個迴圈進行計算，首先找出[freq, value]的組合  \n",
-    "再來對組合內的ㄕ\n"
+    "再來對組合內的數字進行處理，並加入結果中，最後回傳結果\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def decompressRLElist(self, nums: List[int]) -> List[int]:\n",
+    "        result = []\n",
+    "        for n in range(0,len(nums)-1, 2):\n",
+    "            for m in range(nums[n]):\n",
+    "                result.append(nums[n+1])\n",
+    "        return result"
    ]
   }
  ],
