--- a/Easy/520/Detect_Capital.ipynb
+++ b/Easy/520/Detect_Capital.ipynb
@@ -32,7 +32,37 @@
    "source": [
     "* 解題想法：  \n",
     "本題要找出大小寫不符合邏輯的用法，總共有三種是合邏輯的情況：全部大寫，第一個字大寫，或是全部小寫  \n",
-    "因此用這三種邏輯來判斷，如果不\n"
+    "因此用這三種邏輯來判斷，如果不符合這三種邏輯的就是回傳False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def detectCapitalUse(self, word: str) -> bool:\n",
+    "        capitals = ['A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R','S','T','U','V','W','X','Y','Z']\n",
+    "        is_valid = True\n",
+    "        if word[0] in capitals:\n",
+    "            if word[-1] in capitals:\n",
+    "                for l in range(1,len(word)-1):\n",
+    "                    if word[l] not in capitals:\n",
+    "                        is_valid = False\n",
+    "                        break\n",
+    "            else:\n",
+    "                for m in range(1, len(word)):\n",
+    "                    if word[m] in capitals:\n",
+    "                        is_valid = False\n",
+    "                        break\n",
+    "        else:\n",
+    "            for n in range(1, len(word)):\n",
+    "                if word[n] in capitals:\n",
+    "                    is_valid = False\n",
+    "                    break\n",
+    "        \n",
+    "        return is_valid"
    ]
   }
  ],
