--- a/Easy/1089/Duplicate_Zeros.ipynb
+++ b/Easy/1089/Duplicate_Zeros.ipynb
@@ -39,7 +39,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def duplicateZeros(self, arr: List[int]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify arr in-place instead.\n",
+    "        \"\"\"\n",
+    "        total = len(arr)\n",
+    "        is_zero = False\n",
+    "        for n in range(len(arr)):\n",
+    "            if arr[n] == 0 and is_zero == False:\n",
+    "                is_zero = True\n",
+    "                arr.insert(n,0)\n",
+    "                arr.pop()\n",
+    "            elif is_zero == True:\n",
+    "                is_zero  = False"
+   ]
   }
  ],
  "metadata": {
