--- a/Easy/1089/Duplicate_Zeros.ipynb
+++ b/Easy/1089/Duplicate_Zeros.ipynb
@@ -31,7 +31,8 @@
    "source": [
     "* 解題想法：  \n",
     "為了避免重複加入0，在新插入一個0之後，用一個boolean來判斷這個是不是原本就有的0或是後來新增的  \n",
-    "然後如果進到下一個數字之後將boolean做reset"
+    "然後如果進到下一個數字之後將boolean做reset  \n",
+    "另外因為題目要求將原本input進行修改，因此每當新增一個0到list中時，需要將最後一個數字刪除，以確保list長度不變"
    ]
   },
   {
