--- a/Easy/985/Sum_of_Even_Numbers_After_Queries.ipynb
+++ b/Easy/985/Sum_of_Even_Numbers_After_Queries.ipynb
@@ -38,7 +38,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def sumEvenAfterQueries(self, A: List[int], queries: List[List[int]]) -> List[int]:\n",
+    "        result = []\n",
+    "        total = 0\n",
+    "        evens = []\n",
+    "        for a in range(len(A)):\n",
+    "            if A[a] % 2 == 0:\n",
+    "                evens.append(a)\n",
+    "                total += A[a]\n",
+    "        for query in queries:\n",
+    "            if query[1] in evens:\n",
+    "                if query[0] % 2 == 0:\n",
+    "                    total += query[0]\n",
+    "                    result.append(total)\n",
+    "                    A[query[1]] += query[0]\n",
+    "                else:\n",
+    "                    total -= A[query[1]]\n",
+    "                    A[query[1]] += query[0]\n",
+    "                    result.append(total)\n",
+    "                    evens.remove(query[1])\n",
+    "                    \n",
+    "            else:\n",
+    "                if query[0] % 2 == 0:\n",
+    "                    A[query[1]] += query[0]\n",
+    "                    result.append(total)\n",
+    "                else:\n",
+    "                    total += query[0] + A[query[1]]\n",
+    "                    A[query[1]] += query[0]\n",
+    "                    result.append(total)\n",
+    "                    evens.append(query[1])\n",
+    "                    \n",
+    "        return result"
+   ]
   }
  ],
  "metadata": {
