--- a/Easy/1260/Shift_2D_Grid.ipynb
+++ b/Easy/1260/Shift_2D_Grid.ipynb
@@ -36,7 +36,28 @@
    "source": [
     "* 解題想法:  \n",
     "為了要找出轉換後的矩陣，首先將最後一位數字插入最前方進行替換，並將每個子list的第一個數字都暫存下來  \n",
-    "再針對這個暫存矩陣做一次轉換"
+    "再針對這個暫存矩陣做一次轉換，並將數值存回原本的矩陣中，就完成一次的轉換"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def shiftGrid(self, grid: List[List[int]], k: int) -> List[List[int]]:\n",
+    "        result = []\n",
+    "        for m in range(k):\n",
+    "            head = []\n",
+    "            for g in range(len(grid)):\n",
+    "                grid[g].insert(0,grid[g][-1])\n",
+    "                grid[g] = grid[g][:-1]\n",
+    "                head.append(grid[g][0])\n",
+    "            head.insert(0, head[-1])\n",
+    "            for n in range(len(head)-1):\n",
+    "                grid[n][0] = head[n]\n",
+    "        return grid"
    ]
   }
  ],
