--- a/Easy/344/Reverse_String.ipynb
+++ b/Easy/344/Reverse_String.ipynb
@@ -26,7 +26,24 @@
    "metadata": {},
    "source": [
     "* 解題想法:  \n",
-    "由於題目限制只能使用一個額外的空間，因此先從list最後方的字串開始加入，並在加入之後將原本位置的字母"
+    "由於題目限制只能使用一個額外的空間，因此先從list最後方的字串開始加入，而由於加入之後從後方開始數來的位置也會跟著改變，因此迴圈中每次都需要更新加入與移除的位置"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reverseString(self, s: List[str]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify s in-place instead.\n",
+    "        \"\"\"\n",
+    "        size = len(s)\n",
+    "        for m in range(size):\n",
+    "            s.append(s[-(m+1)])\n",
+    "            s.pop(-(m+2))"
    ]
   }
  ],
