--- a/Easy/231/Power_of_Two.ipynb
+++ b/Easy/231/Power_of_Two.ipynb
@@ -100,11 +100,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 解題想法(20220401更新):  \n",
+    "由於符合2的n次方的數值，再轉換成二進位之後應該只能有一個1，其餘都為0，因此首先判斷數值是否為偶數，如果為基數的話是否為1，否則都不可能為2的n次方，接著檢查n是否大於0，如果大於0的話則將n轉換為二進位字串，接著檢查字串中共有幾個1，如果有超過1個1則也不是2的n次方，最後回傳結果\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def isPowerOfTwo(self, n: int) -> bool:\n",
+    "        result = False\n",
+    "        if n % 2 == 1:\n",
+    "            if n == 1:\n",
+    "                result = True\n",
+    "        else:\n",
+    "            if n > 0:\n",
+    "                word = \"{0:b}\".format(n)\n",
+    "                count = 0\n",
+    "                for w in word:\n",
+    "                    if w == '1':\n",
+    "                        count += 1\n",
+    "                if count == 1:\n",
+    "                    result = True\n",
+    "        return result"
+   ]
   }
  ],
  "metadata": {
@@ -123,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
