--- a/Easy/2255/Count_Prefixes_of_a_Given_String.ipynb
+++ b/Easy/2255/Count_Prefixes_of_a_Given_String.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "source": [
     "* 解題想法:  \n",
-    "首先建立一個int用來存放出現的次數，接著開始對提供的list進行迴圈，如果與"
+    "首先建立一個int用來存放出現的次數，接著開始對提供的list進行迴圈，如果與字串開頭相同則將次數+1，最後回傳次數就是答案"
    ]
   },
   {
