--- a/Easy/144/Binary_Tree_Preorder_Traversal.ipynb
+++ b/Easy/144/Binary_Tree_Preorder_Traversal.ipynb
@@ -45,21 +45,21 @@
     "#         self.right = right\n",
     "class Solution:\n",
     "    def preorderTraversal(self, root: Optional[TreeNode]) -> List[int]:\n",
-    "        def preorder(node, stack, vals):\n",
+    "        def preorder(stack, vals):\n",
     "            while stack:\n",
     "                node = stack.pop()\n",
     "                vals.append(node.val)\n",
     "                if node.left:\n",
     "                    stack.append(node.left)\n",
-    "                    preorder(node.left, stack, vals)\n",
+    "                    preorder(stack, vals)\n",
     "                if node.right:\n",
     "                    stack.append(node.right)\n",
-    "                    preorder(node.right, stack, vals)\n",
+    "                    preorder(stack, vals)\n",
     "                                 \n",
     "        result = []\n",
     "        if root:\n",
     "            stack = [root]\n",
-    "            preorder(root, stack, result)\n",
+    "            preorder(stack, result)\n",
     "        return result"
    ]
   }
