--- a/Medium/438/Find_All_Anagrams_in_a_String.ipynb
+++ b/Medium/438/Find_All_Anagrams_in_a_String.ipynb
@@ -33,7 +33,9 @@
    "metadata": {},
    "source": [
     "* 解題想法:  \n",
-    "首先將指定字串內所有的字母放入一個list候進行排序，接著開始從另一字串中擷取長度相同的子字串，並比較組成是否相同，如果相同則將index記下，最後回傳所有的index"
+    "首先將指定字串內所有的字母放入一個list候進行排序，接著開始從另一字串中擷取長度相同的子字串，並比較組成是否相同，如果相同則將index記下，最後回傳所有的index\n",
+    "- 20220722更新解法:  \n",
+    "一樣是建立一個函數用來找出字串中出現字母的頻率，接著在第一次解出字串的字母之後，在每個迴圈中只更新出現與消失的字母並與指定的字串進行比較，最後回傳所有的index"
    ]
   },
   {
@@ -65,6 +67,44 @@
     "                result.append(m)\n",
     "        return result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findAnagrams(self, s: str, p: str) -> List[int]:\n",
+    "        def getChars(word):\n",
+    "            chars = {}\n",
+    "            for w in word:\n",
+    "                if w not in chars.keys():\n",
+    "                    chars[w] = 1\n",
+    "                else:\n",
+    "                    chars[w] += 1\n",
+    "            return chars\n",
+    "        \n",
+    "        result = []\n",
+    "        pchars = getChars(p)\n",
+    "        schars = getChars(s[:len(p)])\n",
+    "        if schars == pchars:\n",
+    "            result.append(0)\n",
+    "        for m in range(1, len(s) -len(p) + 1):\n",
+    "            start = s[m-1]\n",
+    "            end = s[m+len(p)-1]\n",
+    "            if end not in schars.keys():\n",
+    "                schars[end] = 1\n",
+    "            else:\n",
+    "                schars[end] += 1\n",
+    "            if schars[start] > 1:\n",
+    "                schars[start] -= 1\n",
+    "            else:\n",
+    "                schars.pop(start)\n",
+    "            if schars == pchars:\n",
+    "                result.append(m)\n",
+    "        return result"
+   ]
   }
  ],
  "metadata": {
@@ -83,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
