--- a/Medium/792/Number_of_Matching_Subsequences.ipynb
+++ b/Medium/792/Number_of_Matching_Subsequences.ipynb
@@ -40,34 +40,42 @@
     "    def numMatchingSubseq(self, s: str, words: List[str]) -> int:\n",
     "        chars = {}\n",
     "        count = 0\n",
+    "        check = {}\n",
     "        for m in range(len(s)):\n",
     "            if s[m] not in chars.keys():\n",
     "                chars[s[m]] = [m]\n",
     "            else:\n",
     "                chars[s[m]].append(m)\n",
     "        for word in words:\n",
-    "            if word in s:\n",
-    "                count += 1\n",
+    "            if word in check.keys():\n",
+    "                count += check[word]\n",
     "            else:\n",
-    "                temp = -1\n",
-    "                is_valid = True\n",
-    "                for w in word:\n",
-    "                    if w in chars.keys():\n",
-    "                        l = chars[w]\n",
-    "                        if temp < l[-1]:\n",
-    "                            for a in l:\n",
-    "                                if a > temp:\n",
-    "                                    temp = a\n",
-    "                                    break\n",
+    "                if word in s:\n",
+    "                    count += 1\n",
+    "                    check[word] = 1\n",
+    "                else:\n",
+    "                    temp = -1\n",
+    "                    is_valid = True\n",
+    "                    for w in word:\n",
+    "                        if w in chars.keys():\n",
+    "                            l = chars[w]\n",
+    "                            if temp < l[-1]:\n",
+    "                                for a in l:\n",
+    "                                    if a > temp:\n",
+    "                                        temp = a\n",
+    "                                        break\n",
+    "                            else:\n",
+    "                                is_valid = False\n",
+    "                                break\n",
     "                        else:\n",
     "                            is_valid = False\n",
     "                            break\n",
+    "                    if is_valid:\n",
+    "                        count += 1\n",
+    "                        check[word] = 1\n",
     "                    else:\n",
-    "                        is_valid = False\n",
-    "                        break\n",
-    "                if is_valid:\n",
-    "                    count += 1\n",
-    "        return count"
+    "                        check[word] = 0\n",
+    "        return count "
    ]
   }
  ],
