--- a/Medium/357/Count_Numbers_with_Unique_Digits.ipynb
+++ b/Medium/357/Count_Numbers_with_Unique_Digits.ipynb
@@ -37,13 +37,11 @@
     "class Solution:\n",
     "    def countNumbersWithUniqueDigits(self, n: int) -> int:\n",
     "        result = 1\n",
-    "        temp = 0\n",
     "        for m in range(n):\n",
     "            t = 9\n",
     "            for l in range(m):\n",
     "                 t *= 9 - l\n",
     "            result += t\n",
-    "            temp += t\n",
     "        return result"
    ]
   }
@@ -55,7 +53,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
