--- a/Medium/453/Minimum_Moves_to_Equal_Array_Elements.ipynb
+++ b/Medium/453/Minimum_Moves_to_Equal_Array_Elements.ipynb
@@ -39,13 +39,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import heapq\n",
+    "\n",
     "class Solution:\n",
     "    def minMoves(self, nums: List[int]) -> int:\n",
     "        result = 0\n",
     "        if max(nums) != min(nums):\n",
-    "            start = min(nums)\n",
-    "            for n in range(len(nums)):\n",
-    "                result += nums[n] - start\n",
+    "            heapq.heapify(nums)\n",
+    "            start = heapq.heappop(nums)\n",
+    "            while nums:\n",
+    "                result += heapq.heappop(nums) - start\n",
     "        return result"
    ]
   }
