--- a/Easy/733/ Flood_Fill.ipynb
+++ b/Easy/733/ Flood_Fill.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 本題要將相鄰相同的顏色修改成指定的顏色 (\\#DFS, \\#Array)\n",
+    "# 本題要將相鄰相同的顏色修改成指定的顏色 (\\#DFS, \\#Array, \\#Matrix)\n",
     "原題目連結: https://leetcode.com/problems/flood-fill/  \n",
     "\n",
     "An image is represented by an m x n integer grid image where image[i][j] represents the pixel value of the image.  \n",
