--- a/Medium/881/Boats_to_Save_People.ipynb
+++ b/Medium/881/Boats_to_Save_People.ipynb
@@ -33,7 +33,9 @@
    "metadata": {},
    "source": [
     "* 解題想法:  \n",
-    "首先將peopel內的數值進行排序之後，依序開始與limit進行比較，如果相等則代表沒空間可以多一個人，因此將結果+1後從people中移除，如果小於limit則檢查如果加上最後面的人是否符合條件，如果不符合條件則這艘船也只能載一個人，並將這個人從list中移除，直到people清空為止"
+    "首先將peopel內的數值進行排序之後，依序開始與limit進行比較，如果相等則代表沒空間可以多一個人，因此將結果+1後從people中移除，如果小於limit則檢查如果加上最後面的人是否符合條件，如果不符合條件則這艘船也只能載一個人，並將這個人從list中移除，直到people清空為止  \n",
+    "* 2023/4/3 更新:  \n",
+    "因為題目限制一艘船最多兩個人，因此先進行排序之後用2 pointer的方式來進行檢查，如果左右兩個端點小於或等於限制則左右同時往中間移動，如果不符合則檢查右側是否小於或等於限制值，如果不符合則檢查左側是否小於或等於限制值，並更新左右的範圍值，直到左邊的邊界超過右邊的邊界值則停止迴圈"
    ]
   },
   {
@@ -64,6 +66,30 @@
     "                    people.pop()\n",
     "        return result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def numRescueBoats(self, people: List[int], limit: int) -> int:\n",
+    "        res = 0 \n",
+    "        people.sort()\n",
+    "        l = 0\n",
+    "        r = len(people) - 1\n",
+    "        while l <= r:\n",
+    "            if limit >= people[l] + people[r]:\n",
+    "                r -= 1\n",
+    "                l += 1\n",
+    "            elif limit >= people[r]:\n",
+    "                r -= 1\n",
+    "            else:\n",
+    "                l += 1\n",
+    "            res += 1\n",
+    "        return res"
+   ]
   }
  ],
  "metadata": {
@@ -82,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
