--- a/Medium/881/Boats_to_Save_People.ipynb
+++ b/Medium/881/Boats_to_Save_People.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 本題要計算最少要多少船隻才能把所有人都運走\n",
+    "# 本題要計算最少要多少船隻才能把所有人都運走 (\\#Array, \\#Two-Pointer)\n",
     "原題目連結: https://leetcode.com/problems/boats-to-save-people/  \n",
     "\n",
     "You are given an array people where people[i] is the weight of the ith person, and an infinite number of boats where each boat can carry a maximum weight of limit. Each boat carries at most two people at the same time, provided the sum of the weight of those people is at most limit.  \n",
@@ -70,7 +70,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "class Solution:\n",
