--- a/Medium/328/Odd_Even_Linked_List.ipynb
+++ b/Medium/328/Odd_Even_Linked_List.ipynb
@@ -70,11 +70,53 @@
     "        else:\n",
     "            return None"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* (20230830更新)  \n",
+    "這邊改成用兩個LinkedList分別存放index為奇數與偶數的ListNode，接著將兩個LinkedList串起來作為最後的答案"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode:\n",
+    "#     def __init__(self, val=0, next=None):\n",
+    "#         self.val = val\n",
+    "#         self.next = next\n",
+    "class Solution:\n",
+    "    def oddEvenList(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        temp = head\n",
+    "        index = 0\n",
+    "        even = ListNode()\n",
+    "        ev = even\n",
+    "        odd = ListNode()\n",
+    "        od = odd\n",
+    "        while temp:\n",
+    "            n = ListNode()\n",
+    "            n.val = temp.val\n",
+    "            if index % 2 == 0:\n",
+    "                ev.next = n\n",
+    "                ev = ev.next\n",
+    "            else:\n",
+    "                od.next = n\n",
+    "                od = od.next\n",
+    "            temp = temp.next\n",
+    "            index += 1\n",
+    "        ev.next = odd.next\n",
+    "        return even.next"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -88,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
