--- a/SQL/1075/Project_Employees_I.ipynb
+++ b/SQL/1075/Project_Employees_I.ipynb
@@ -91,10 +91,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write your MySQL query statement below\n",
+    "```\n",
+    "# Write your MySQL query statement below\n",
     "select project_id, round(sum(experience_years) / count(experience_years), 2) as average_years from\n",
     "(select Project.project_id, Employee.employee_id, Employee.experience_years from Project join Employee on Project.employee_id = Employee.employee_id) a\n",
-    "group by project_id"
+    "group by project_id\n",
+    "```"
    ]
   }
  ],
