--- a/SQL/1211/Queries Quality_and_Percentage.ipynb
+++ b/SQL/1211/Queries Quality_and_Percentage.ipynb
@@ -80,14 +80,16 @@
    "id": "347543e7-7907-4c7f-9835-c6f9aab32a7f",
    "metadata": {},
    "source": [
-    "#Write your MySQL query statement below\n",
+    "```\n",
+    "# Write your MySQL query statement below\n",
     "select b.query_name, b.quality, ifnull(d.poor_query_percentage,0) as poor_query_percentage from\n",
     "(select query_name, round(sum(rating / position)/count(query_name), 2) as quality from Queries where query_name is not null group by query_name) b left join \n",
     "(select a.query_name, round(a.p / c.r * 100, 2) as poor_query_percentage from \n",
     "(select query_name, count(query_name) as r from Queries group by query_name) c left join\n",
     "(select query_name, count(query_name) as p from Queries where rating < 3 group by query_name) a\n",
     "on c.query_name = a.query_name) d\n",
-    "on d.query_name = b.query_name"
+    "on d.query_name = b.query_name\n",
+    "```"
    ]
   }
  ],
@@ -107,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
