--- a/SQL/1633/Percentage_of_Users_Attended_a_Contest.ipynb
+++ b/SQL/1633/Percentage_of_Users_Attended_a_Contest.ipynb
@@ -99,8 +99,10 @@
    "id": "4daab233-9dc4-4c1f-bc92-17657999fd17",
    "metadata": {},
    "source": [
-    "#Write your MySQL query statement below\n",
-    "select contest_id, round(count(user_id) / (select count(*) from Users) * 100, 2) as percentage from Register group by contest_id order by percentage desc, contest_id asc"
+    "```\n",
+    "# Write your MySQL query statement below\n",
+    "select contest_id, round(count(user_id) / (select count(*) from Users) * 100, 2) as percentage from Register group by contest_id order by percentage desc, contest_id asc\n",
+    "```"
    ]
   }
  ],
