--- a/SQL/1731/The_Number_of_Employees_Which_Report_to_Each_Employee.ipynb
+++ b/SQL/1731/The_Number_of_Employees_Which_Report_to_Each_Employee.ipynb
@@ -65,10 +65,12 @@
    "id": "d9ac6bd0-9cde-446d-b9ca-dd4e41681f33",
    "metadata": {},
    "source": [
-    "#Write your MySQL query statement below\n",
+    "```\n",
+    "# Write your MySQL query statement below\n",
     "select employee_id, name, reports_count, average_age from Employees join \n",
     "( select reports_to,count(reports_to) as reports_count, round(avg(age), 0) as average_age from Employees group by reports_to ) t\n",
-    "on employees.employee_id = t.reports_to order by employees.employee_id"
+    "on employees.employee_id = t.reports_to order by employees.employee_id\n",
+    "```"
    ]
   }
  ],
