--- a/SQL/1789/Primary_Department_for_Each_Employee.ipynb
+++ b/SQL/1789/Primary_Department_for_Each_Employee.ipynb
@@ -78,11 +78,13 @@
    "id": "248ba78f-3adf-4daf-b208-2f81772e38ef",
    "metadata": {},
    "source": [
+    "```\n",
     "# Write your MySQL query statement below\n",
     "select employee_id, department_id from Employee where primary_flag='Y' and employee_id not in \n",
     "(select employee_id from (select employee_id, count(employee_id) as c from Employee group by employee_id) a where c = 1)\n",
     "union all \n",
-    "select employee_id, department_id from (select employee_id, department_id, count(employee_id) as c from Employee group by employee_id) t where c = 1"
+    "select employee_id, department_id from (select employee_id, department_id, count(employee_id) as c from Employee group by employee_id) t where c = 1\n",
+    "```"
    ]
   }
  ],
@@ -102,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
