--- a/SQL/1934/Confirmation_Rate.ipynb
+++ b/SQL/1934/Confirmation_Rate.ipynb
@@ -99,13 +99,15 @@
    "id": "a93dd335-8f88-4ed4-a057-b691535aabed",
    "metadata": {},
    "source": [
-    "#Write your MySQL query statement below\n",
+    "```\n",
+    "# Write your MySQL query statement below\n",
     "select SignUps.user_id, IFNULL(con.confirmation_rate, 0) as confirmation_rate from SignUps left join \n",
     "(select a.user_id, round( a.a / c.count, 2) as confirmation_rate from \n",
     "(select user_id, count(*) as a from Confirmations where action = 'confirmed' group by user_id ) a join\n",
     "(select user_id, count(*) as count from Confirmations group by user_id ) c\n",
     "on a.user_id = c.user_id ) con\n",
-    "on SignUps.user_id = con.user_id"
+    "on SignUps.user_id = con.user_id\n",
+    "```"
    ]
   }
  ],
