--- a/SQL/1978/Employees_Whose_Manager_Left_the_Company.ipynb
+++ b/SQL/1978/Employees_Whose_Manager_Left_the_Company.ipynb
@@ -70,9 +70,11 @@
    "id": "d3ad4c59-f143-49aa-baa1-ddc7cf74d847",
    "metadata": {},
    "source": [
+    "```\n",
     "# Write your MySQL query statement below\n",
     " select employee_id from Employees where manager_id not in \n",
-    " (select employee_id from Employees ) and salary < 30000 order by employee_id"
+    " (select employee_id from Employees ) and salary < 30000 order by employee_id\n",
+    " ```"
    ]
   }
  ],
