--- a/SQL/1327/List_the_Products_Ordered_in_a_Period.ipynb
+++ b/SQL/1327/List_the_Products_Ordered_in_a_Period.ipynb
@@ -106,11 +106,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write your MySQL query statement below\n",
+    "```\n",
+    "# Write your MySQL query statement below\n",
     "select product_name, unit from Products join \n",
     "(select product_id, sum(unit) as unit from Orders where order_date between '2020-02-01' and '2020-02-29' group by product_id) t\n",
     "on Products.product_id = t.product_id\n",
-    "where unit >= 100"
+    "where unit >= 100\n",
+    "```"
    ]
   }
  ],
