--- a/SQL/577/Employee_Bonus.ipynb
+++ b/SQL/577/Employee_Bonus.ipynb
@@ -88,8 +88,10 @@
    "id": "28295d01-2e85-4d21-9252-e5a216be01c7",
    "metadata": {},
    "source": [
-    "#Write your MySQL query statement below  \n",
-    "select * from (select name, bonus from Employee left join Bonus on Employee.empId = Bonus.empId) t where bonus is null or bonus < 1000"
+    "```\n",
+    "# Write your MySQL query statement below  \n",
+    "select * from (select name, bonus from Employee left join Bonus on Employee.empId = Bonus.empId) t where bonus is null or bonus < 1000\n",
+    "```"
    ]
   }
  ],
@@ -109,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
