--- a/SQL/3705/Find_Golden_Hour_Customers.ipynb
+++ b/SQL/3705/Find_Golden_Hour_Customers.ipynb
@@ -5,7 +5,7 @@
    "id": "8b233f15-cc92-4778-ac3e-00193757863c",
    "metadata": {},
    "source": [
-    "# 本題要找出那些用戶在指定時間用餐的比例到達指定範圍，以及評分超過指定範圍 (\\#GroupBy, \\#Time_Format )\n",
+    "# 本題要找出那些用戶在指定時間用餐的比例到達指定範圍，以及評分超過指定範圍 (\\#GroupBy, \\#Join, \\#Time_Format )\n",
     "原題目連結: https://leetcode.com/problems/find-golden-hour-customers/description/  \n",
     "\n",
     "Table: `restaurant_orders`  \n",
