--- a/SQL/3564/Seasonal_Sales_Analysis.ipynb
+++ b/SQL/3564/Seasonal_Sales_Analysis.ipynb
@@ -98,26 +98,26 @@
     "Explanation:  \n",
     "\n",
     "- Fall (Sep, Oct, Nov):  \n",
-    "Apparel: 10 items sold (6 Jackets in Sep, 4 Jeans in Nov), revenue $120.00 (6×$10.00 + 4×$15.00)  \n",
-    "Fitness: 3 Yoga Mats sold in Sep, revenue $36.00  \n",
+    "Apparel: 10 items sold (6 Jackets in Sep, 4 Jeans in Nov), revenue \\\\$120.00 (6×\\\\$10.00 + 4×\\\\$15.00)  \n",
+    "Fitness: 3 Yoga Mats sold in Sep, revenue \\\\$36.00  \n",
     "Most popular: Apparel with highest total quantity (10)  \n",
     "- Spring (Mar, Apr, May):  \n",
-    "Kitchen: 3 Cutting Boards sold in Mar, revenue $54.00  \n",
-    "Tech: 1 Smart Speaker sold in Apr, revenue $20.00  \n",
-    "Apparel: 2 Warm Jackets sold in May, revenue $20.00  \n",
-    "Most popular: Kitchen with highest total quantity (3) and highest revenue ($54.00)  \n",
+    "Kitchen: 3 Cutting Boards sold in Mar, revenue \\\\$54.00  \n",
+    "Tech: 1 Smart Speaker sold in Apr, revenue \\\\$20.00  \n",
+    "Apparel: 2 Warm Jackets sold in May, revenue \\\\$20.00  \n",
+    "Most popular: Kitchen with highest total quantity (3) and highest revenue (\\\\$54.00)  \n",
     "- Summer (Jun, Jul, Aug):  \n",
-    "Apparel: 4 Designer Jeans sold in Jun, revenue $60.00  \n",
-    "Fitness: 5 Yoga Mats sold in Jun, revenue $60.00  \n",
-    "Kitchen: 2 Cutting Boards sold in Jul, revenue $36.00  \n",
-    "Tech: 5 Smart Speakers sold in Aug, revenue $100.00  \n",
-    "Most popular: Tech and Fitness both have 5 items, but Tech has higher revenue ($100.00 vs $60.00)  \n",
+    "Apparel: 4 Designer Jeans sold in Jun, revenue \\\\$60.00  \n",
+    "Fitness: 5 Yoga Mats sold in Jun, revenue \\\\$60.00  \n",
+    "Kitchen: 2 Cutting Boards sold in Jul, revenue \\\\$36.00  \n",
+    "Tech: 5 Smart Speakers sold in Aug, revenue \\\\$100.00  \n",
+    "Most popular: Tech and Fitness both have 5 items, but Tech has higher revenue (\\\\$100.00 vs \\\\$60.00)  \n",
     "- Winter (Dec, Jan, Feb):  \n",
-    "Apparel: 9 items sold (5 Jackets in Jan, 4 Jeans in Jan), revenue $110.00  \n",
-    "Kitchen: 6 Cutting Boards sold in Dec, revenue $108.00  \n",
-    "Tech: 3 Smart Speakers sold in Dec, revenue $60.00  \n",
-    "Fitness: 2 Yoga Mats sold in Feb, revenue $24.00  \n",
-    "Most popular: Apparel with highest total quantity (9) and highest revenue ($110.00)\n",
+    "Apparel: 9 items sold (5 Jackets in Jan, 4 Jeans in Jan), revenue \\\\$110.00  \n",
+    "Kitchen: 6 Cutting Boards sold in Dec, revenue \\\\$108.00  \n",
+    "Tech: 3 Smart Speakers sold in Dec, revenue \\\\$60.00  \n",
+    "Fitness: 2 Yoga Mats sold in Feb, revenue \\\\$24.00  \n",
+    "Most popular: Apparel with highest total quantity (9) and highest revenue (\\\\$110.00)\n",
     "\n",
     "The result table is ordered by season in ascending order.  "
    ]
