--- a/SQL/550/Game_Play_Analysis_IV.ipynb
+++ b/SQL/550/Game_Play_Analysis_IV.ipynb
@@ -63,9 +63,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f305c24-b3ce-4829-b162-3664e7c08440",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Write your MySQL query statement below\n",
+    "\n",
+    "select ifnull(round(count(player_id) / c, 2), 0) as fraction from \n",
+    "(select a.player_id, a.c, a.n from \n",
+    "(select * from \n",
+    "(select player_id, event_date, (select count(distinct(player_id)) from activity ) as c, \n",
+    "row_number() over (partition by player_id order by event_date ) as n,  \n",
+    "adddate(event_date, 1) as ne from activity ) d \n",
+    "where n = 1\n",
+    ") a\n",
+    "inner join \n",
+    "activity\n",
+    "on a.player_id = activity.player_id and a.ne = activity.event_date ) t\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e59345d-efd1-4197-af27-2e9007eb01a6",
+   "id": "18909ef1-8782-4d3a-bfcc-a216f73bb5c2",
    "metadata": {},
    "outputs": [],
    "source": []
