--- a/SQL/1204/Last_Person_to_Fit_in_the_Bus.ipynb
+++ b/SQL/1204/Last_Person_to_Fit_in_the_Bus.ipynb
@@ -81,9 +81,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df1062fc-f187-4bc9-9b72-a2adec557e09",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Write your MySQL query statement below\n",
+    "select person_name from queue\n",
+    "where turn = \n",
+    "(select max(turn) as m from \n",
+    "(select *, sum(weight) over (order by turn) as cumu from queue ) q\n",
+    "where cumu <= 1000 )\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7956a7b-5a7e-44aa-ad3d-798586cb77c1",
+   "id": "bf4cde96-8385-4a70-ba7e-301a7845700d",
    "metadata": {},
    "outputs": [],
    "source": []
